--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<title>TaskApp</title>
 	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script defer src="windowButton.js"></script>
+	<script defer src="windowFunc.js"></script>
 	<script defer src="taskHandler.js"></script>
 </head>
 <body>
@@ -22,13 +22,8 @@
 			<input type="text" id="taskInput" autofocus>
 			<button type="button" id="taskSubmit"><i class="fas fa-plus"></i></button>
 		</div>
-		<ol id="taskOL" type="1" class="task">
-			<!-- <h1 style="text-align: center;">Hurray No task todo!</h1> -->
-			<!-- <li>
-				<input type="checkbox" id="checkboxOne">
-				<label for="checkboxOne">Volleyball</label>
-			</li> -->
-		</ol>
+		<ol id="taskOL" type="1" class="task"></ol>
+
 		<footer>
 			<div style="margin-bottom: 6px; color: #9e9e9e;" id="task-percent">
 				0% of all tasks complete.
