--- a/www/index.html
+++ b/www/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TaskApp</title>
-	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script defer src="windowFunc.js"></script>
-	<script defer src="taskHandler.js"></script>
+	<link rel="stylesheet" href="./build/bundle.css">
+	<script src="./neutralino.js"></script>
+	<script defer src="./build/bundle.js"></script>
 </head>
 <body>
 
 <div class="container">
-	<div class="top">
+	<div id="titleBar" class="top">
 		<span id="btn-minimize" class="dot btn-minimize"></span>
 		<span id="btn-zoom" class="dot btn-zoom"></span>
 		<span id="btn-exit" class="dot btn-exit"></span>
